sinalcabo/force-app/main/default/objects/Contact/fields/Actividade_Status__c.field-meta.xml
<CustomField>
    <fullName>Actividade_Status__c</fullName>
    <description>SinalCabo: Saúde do relacionamento com o contacto, calculada a partir da última actividade registada.</description>
    <formula>IF(ISNULL(LastActivityDate),
  &quot;⚠ Sem actividade registada&quot;,
  IF(TODAY() - LastActivityDate &gt; 60,
    &quot;⚠ Inactivo há &quot; &amp; TEXT(TODAY() - LastActivityDate) &amp; &quot;d&quot;,
    IF(TODAY() - LastActivityDate &gt; 30,
      &quot;● &quot; &amp; TEXT(TODAY() - LastActivityDate) &amp; &quot;d sem contacto&quot;,
      &quot;✓ Activo — último há &quot; &amp; TEXT(TODAY() - LastActivityDate) &amp; &quot;d&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actividade</label>
    <type>Text</type>
</CustomField>