sinalcabo/force-app/main/default/objects/Contact/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <description>SinalCabo (B.9) - Departamento do contacto, picklist ligada ao Global Value Set SC_Departamento. Substitui o campo standard Department (texto).</description>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SC_Departamento</valueSetName>
    </valueSet>
</CustomField>