sinalcabo/force-app/main/default/objects/Contact/fields/Influencia__c.field-meta.xml
<CustomField>
    <fullName>Influencia__c</fullName>
    <description>SinalCabo: Papel do contacto no processo de compra/decisão.</description>
    <label>Influência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decisor</fullName>
            </value>
            <value>
                <fullName>Influenciador</fullName>
            </value>
            <value>
                <fullName>Utilizador</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Bloqueador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>