sinalcabo/force-app/main/default/objects/Contact/fields/KAM_Responsavel__c.field-meta.xml
<CustomField>
    <fullName>KAM_Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key Account Manager responsável por este contacto. Campo apenas de apresentação na página de registo e no compact layout, sem automação associada.</description>
    <label>KAM Responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Contacts (KAM Responsável)</relationshipLabel>
    <relationshipName>Contacts_KAM</relationshipName>
    <type>Lookup</type>
</CustomField>