sinalcabo/force-app/main/default/objects/Contact/fields/Migrado__c.field-meta.xml
<CustomField>
    <fullName>Migrado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca os registos que entraram no sistema pela migração inicial de dados e não por criação directa no Salesforce. É preenchido durante a carga, não aparece na ficha e serve para separar em relatórios o histórico migrado do que nasce no sistema.</description>
    <label>Migrado</label>
    <type>Checkbox</type>
</CustomField>