sinalcabo/force-app/main/default/objects/Contact/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <description>Notas e contexto de relacionamento com este contacto, preenchidas livremente pelo comercial ou KAM responsável.</description>
    <label>Notas</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>