sinalcabo/force-app/main/default/objects/Contact/fields/Other_Morada__c.field-meta.xml
<CustomField>
    <fullName>Other_Morada__c</fullName>
    <description>SinalCabo: Morada alternativa do contacto.</description>
    <label>Outra Morada</label>
    <type>TextArea</type>
</CustomField>