sinalcabo/force-app/main/default/objects/Contact/fields/Preferencia_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Preferencia_Contacto__c</fullName>
    <description>SinalCabo: Canal preferido de contacto com esta pessoa.</description>
    <label>Preferência de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Reunião Presencial</fullName>
            </value>
            <value>
                <fullName>Teams / Videochamada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>